Initial commit: Personal website built with Spectre theme

--- a/src/content/other/about.mdx
+++ b/src/content/other/about.mdx
@@ -1,5 +1,5 @@
-Spectre is a terminal-inspired theme for Astro!
+I build recruiting systems that think.
 
-It features a sleek dark-mode aesthetic, various social features inspired by Neocities, perfect lighthouse scores, full keyboard accessibility, comments powered by [giscus](https://giscus.app), a search powered by [pagefind](https://pagefind.app) and more!
+I design tools where psychology, structure, and intuition meet—turning messy human signals into clarity. My work blends automation, design, and philosophy to reimagine how people and companies connect.
 
-If you want to dive deeper, check out the example project, and if you want to get started, check out the blog post!
+If you want to explore my frameworks, check the essays. If you want to build something together, reach out.
