Remove .vscode from tracking and add to gitignore

--- a/src/content/projects/ashby-slack-feedback.mdx
+++ b/src/content/projects/ashby-slack-feedback.mdx
@@ -2,7 +2,7 @@
 title: Ashby Slack Feedback
 date: 01-20-2025
 description: Automated interview feedback collection via Slack modals for Ashby ATS. Built in ~3 days using FastAPI, AsyncPG, and the Slack SDK.
-image: ../assets/ashby-slack-feedback.svg
+image: ../assets/ashby-slack-feedback.png
 info:
   - text: GitHub
     link: https://github.com/maxames/ashby-slack-feedback
