--- a/src/content/other/about.mdx
+++ b/src/content/other/about.mdx
@@ -2,4 +2,4 @@ I build recruiting systems that think.
 
 I design tools where psychology, structure, and intuition meet—turning messy human signals into clarity. My work blends automation, design, and philosophy to reimagine how people and companies connect.
 
-If you want to explore my frameworks, check the essays. If you want to build something together, reach out.
+If you want to explore my frameworks, check the articles. If you want to build something together, reach out.
