Update about page content

--- a/src/content/other/about.mdx
+++ b/src/content/other/about.mdx
@@ -1,5 +1,5 @@
-I build recruiting systems that think.
+I've spent most of my career in talent acquisition at early and growth-stage tech companies, including Stripe and Anduril, with a few years in agency recruiting and occasional detours into HR more broadly.
 
-I design tools where psychology, structure, and intuition meet—turning messy human signals into clarity. My work blends automation, design, and philosophy to reimagine how people and companies connect.
+I'm as engaged by building teams as I am evaluating the systems and constraints that hiring operates within. What drives me is finding the levers that actually matter and building abstractions that make a seemingly nebulous organizational function more legible.
 
-If you want to explore my frameworks, check the articles. If you want to build something together, reach out.
+Want to see how I approach this? Check out the articles. Want to work together? Get in touch.
